Improve reporting and progress bar