@@ -67,17 +67,18 @@ class WordleCLI implements Callable<Integer> {
                     IntStream.range(0, s - histogram.size() + 1).mapToObj(_unused -> new AtomicInteger()).forEachOrdered(histogram::add);
                 }
                 histogram.get(s).incrementAndGet();
-                if (progress) {
-                    final int curr = i + 1;
-                    int percent = (int) (1.0 * curr * 70 / max);
-                    final String string = "\r"
-                            + String.format(Locale.US, "avg. score: %f ", 1.0 * score / solved)
-                            + " ".repeat(percent == 0 ? 2 : 2 - (int) (Math.log10(percent)))
-                            + " %d%% [".formatted(percent) + "=".repeat(percent) + '>' + " ".repeat(70 - percent) + ']'
-                            + " ".repeat((int) (Math.log10(max)) - (int) (Math.log10(curr)))
-                            + " %d/%d".formatted(curr, max);
-                    System.err.print(string);
-                }
+            }
+            if (progress) {
+                final int curr = i + 1;
+                int percent = (int) (1.0 * curr * 100 / max);
+                final String string = "\r"
+                        + String.format(Locale.US, "avg. score: %.3f ", 1.0 * score / solved)
+                        + " ".repeat(percent == 0 ? 2 : 2 - (int) (Math.log10(percent)))
+                        + " %d%% [".formatted(percent) + "=".repeat((int) (percent * .42)) + '>' + " ".repeat(
+                        (int) ((100 - percent) * .42)) + ']'
+                        + " ".repeat((int) (((int) (Math.log10(max)) - (int) (Math.log10(curr))) * .42))
+                        + " %d/%d".formatted(curr, max);
+                System.err.print(string);
             }
         }
         System.err.println();
@@ -96,6 +97,7 @@ class WordleCLI implements Callable<Integer> {
                             LongStream.range(0, white).mapToObj(v -> " ").collect(Collectors.joining()), c);
         });
         System.err.printf(Locale.US, "avg score: %f%n", 1.0 * score / solved);
+        System.err.printf(Locale.US, "solved: %.2f%%%n", 1.0 * solved / max * 100);
 
         return 0;
     }
